<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default Strings -->

    <string name="app_name">TimeTurner</string>

    <!-- General Buttons -->
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_start">Start</string>
    <string name="button_start_switch">Switch</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_statistics">Statistics</string>

    <!-- Nav Drawer Menu -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="menu_home">Home</string>
    <string name="menu_newtask">New Task</string>
    <string name="menu_listtasks">List Tasks</string>
    <string name="menu_listrecordings">List Recordings</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>

    <!-- Activity Titles -->
    <string name="title_activity_running">Recording Task</string>
    <string name="title_activity_list_tasks">All Tasks</string>
    <string name="title_activity_list_recordings">All Recordings</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_edit_recording">Edit Recording</string>
    <string name="title_activity_preferences">Settings</string>

    <!-- Edit Task name -->
    <string name="edit_task">Edit Task</string>
    <string name="label_starttime">Start Time: </string>
    <string name="label_stoptime">Stop Time: </string>
    <string name="toast_recording_saved">Recording was successfully saved.</string>
    <string name="prompt_taskname_invalid">This task name is not allowed.</string>
    <string name="prompt_taskname_exists">This task name already exists.</string>
    <string name="autocomplete_task_hint">Select Task</string>
    <string name="prompt_time_invalid">Invalid time format.</string>
    <string name="prompt_delete_recording">Do you really want to delete the recording?</string>
    <string name="prompt_delete_task">Do you really want to delete the task? This will also delete any recording tracking this task.</string>

    <!-- Statistics names -->
    <string name="str1">Today</string>
    <string name="str2">Yesterday</string>
    <string name="str3">Current Week</string>
    <string name="str4">Last Week</string>
    <string name="str5">Current Month</string>
    <string name="str6">Last Month</string>
    <string name="str7">Custom</string>

    <!-- Custom Range Dialog names -->
    <string name="notification_suggestion_title">Update your time recording</string>
    <string name="notification_suggestion_text">Suggesting </string>
    <string name="time_range">Time Range</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="title_activity_task_wise_stats">TaskWiseStats</string>
    <string name="action_settings">Settings</string>
    <string name="label_task_parent">Parent: </string>
    <string name="label_task">Task: </string>
    <string name="label_task_description">Description: </string>
    <string name="label_duration">Duration:</string>
    <string name="label_recordings">Recordings</string>
    <string name="recentTv">Recent Activities</string>
    <string name="notification_recording">Working on</string>
    <string name="action_new_recording">New</string>
    <string name="action_new_task">New</string>
    <string name="promptCreateNewTask">Do you want to create a new task?</string>

    <!-- Import/Export -->
    <string name="label_export">Export</string>
    <string name="export_summary">Save a backup of your data in CSV format</string>
    <string name="label_import">Import</string>
    <string name="import_summary">Add data from a CSV file</string>
    <string name="msg_export_error_file">Could not write file:</string>
    <string name="msg_export_success">Exported data successfully:</string>
    <string name="msg_import_error_date">Could not import record because of invalid date format.</string>
    <string name="msg_import_error_file">Could not read file:</string>
    <string name="msg_import_success">Successfully imported data.</string>
    <string name="prompt_reset_database">Do you want to reset the database?</string>


    <string name="pref_title_notify">Notifications</string>
    <string name="pref_summary_notify">Remind you to update your recorded activity</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="about_summary">https://github.com/MC-Timetracker/timetracker</string>

</resources>