<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notify"
        android:summary="@string/pref_summary_notify"
        android:title="@string/pref_title_notify" />


    <Preference
        android:key="export"
        android:summary="@string/export_summary"
        android:title="@string/label_export" />

    <Preference
        android:key="import"
        android:summary="@string/import_summary"
        android:title="@string/label_import" />

    <Preference
        android:key="version"
        android:title="@string/version" />

    <Preference
        android:key="about"
        android:summary="@string/about_summary"
        android:title="@string/about" />

</PreferenceScreen>
