<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iiitd.mc.timetracker.view.MainActivity">


    <LinearLayout
        android:id="@+id/root_layout"
        android:orientation="vertical"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:padding="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/running_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_recording_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Task.Name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format="%s"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/pausestop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnPause"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/button_pause"
                    android:background="@drawable/orangebutton"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_stop"
                    android:background="@drawable/redpausebutton" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/border">

            <iiitd.mc.timetracker.view.component.TaskAutoCompleteTextView
                android:id="@+id/taskSelectionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete|textAutoCorrect" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/greenstartbutton"
                android:text="@string/button_start" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/recentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@+id/root_layout"
        android:text="@string/recentTv"/>

    <ListView
        android:id="@+id/recentLv"
        android:layout_below="@+id/recentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

</RelativeLayout>